--- a/Index.html
+++ b/Index.html
@@ -25,6 +25,12 @@
     <aside>
        <h3>Titulo de contenido</h3>
            <p>contenido</p>
+			<a class="twitter-timeline"
+			  data-widget-id="600720083413962752"
+			  href="https://twitter.com/TwitterDev"
+			  data-chrome="nofooter noborders">
+			Tweets by @TwitterDev
+			</a>
     </aside>
     <footer>
         Creado por el puto amo
